--- a/health_parent/health_backend/src/main/webapp/pages/checkitems.html
+++ b/health_parent/health_backend/src/main/webapp/pages/checkitems.html
@@ -225,11 +225,38 @@
             },
             //钩子函数，VUE对象初始化完成后自动执行
             created() {
-                this.findPage();
+                this.findPage();//VUE对象初始化完成后调用分页查询方法，完成分页查询
             },
             methods: {
                 //编辑
                 handleEdit() {
+                    //进行表单校验
+                    this.$refs['dataEditForm'].validate((valid) => {
+                        if(valid){
+                            //表单校验通过，可以提交数据
+                            axios.post("/checkitem/edit.do",this.formData).then((res) => {
+                                if(res.data.flag){
+                                    //弹出成功提示信息
+                                    this.$message({
+                                        type:'success',
+                                        message:res.data.message
+                                    });
+                                }else{
+                                    //执行失败
+                                    this.$message.error(res.data.message);
+                                }
+                            }).finally(() => {
+                                //不管成功还是失败，都调用分页查询方法
+                                this.findPage();
+                                //隐藏编辑窗口
+                                this.dialogFormVisible4Edit = false;
+                            });
+                        }else{
+                            //表单校验不通过
+                            this.$message.error("表单数据校验失败!");
+                            return false;
+                        }
+                    });
                 },
                 //添加
                 handleAdd () {
@@ -263,56 +290,69 @@
                 },
                 //分页查询
                 findPage() {
-                    currentPage= this.pagination.currentPage;
-                    pageSize=  this.pagination.pageSize;
-                    queryString= this.pagination.queryString;
-                    if(queryString!=null){
-                        currentPage=1;
-                    }
-
-                    var param= {
-                        currentPage: currentPage,
-                        pageSize:  pageSize,
-                        queryString: queryString
-
+                    //发送ajax请求，提交分页相关请求参数（页码、每页显示记录数、查询条件）
+                    var param = {
+                        currentPage:this.pagination.currentPage,
+                        pageSize:this.pagination.pageSize,
+                        queryString: this.pagination.queryString
                     };
-
                     axios.post("/checkitem/findPage.do",param).then((res)=>{
-                        this.pagination.total =res.data.total;
-                        this.dataList= res.data.rows;
+                        //解析Controller响应回的数据，为模型数据赋值
+                        this.pagination.total = res.data.total;
+                        this.dataList = res.data.rows;
                     });
                 },
                 // 重置表单
                 resetForm() {
-                    this.formData={};
+                    this.formData = {};//重置数据
                 },
                 // 弹出添加窗口
                 handleCreate() {
-                    this.dialogFormVisible=true;
+                    //弹出新增窗口
+                    this.dialogFormVisible = true;
                     this.resetForm();
                 },
                 // 弹出编辑窗口
                 handleUpdate(row) {
+                    //弹出编辑窗口
+                    this.dialogFormVisible4Edit = true;
+                    //回显数据，发送ajax请求根据ID查询当前检查项数据
+                    axios.get("/checkitem/findById.do?id=" + row.id).then((res) => {
+                        if(res.data.flag){
+                            //进行回显，基于VUE的数据绑定实现
+                            this.formData = res.data.data;
+                        }else{
+                            //查询失败，弹出提示
+                            this.$message.error(res.data.message);
+                        }
+                    });
                 },
                 //切换页码
                 handleCurrentChange(currentPage) {
-                    this.pagination.currentPage =currentPage;
+                    //设置最新的页码
+                    this.pagination.currentPage = currentPage;
+                    //重新调用findPage方法进行分页查询
                     this.findPage();
                 },
                 // 删除
-                handleDelete(row) {
-                    this.$confirm("是否删除？","提示",{
-                        type: 'warning'
+                handleDelete(row) {//row其实是一个json对象，json对象的结构为{"age":"0-100","attention":"无","code":"0011","id":38,"name":"白细胞计数","price":10.0,"remark":"白细胞计数","sex":"0","type":"2"}
+                    //alert(row.id);
+                    this.$confirm("你确定要删除当前数据吗？","提示",{//确认框
+                        type:'warning'
                     }).then(()=>{
-                        axios.get("/checkitem/delete.do?id="+row.id).then((res)=>{
+                        //用户点击确定按钮，发送ajax请求，将检查项ID提交到Controller进行处理
+                        axios.get("/checkitem/delete.do?id=" + row.id).then((res) => {
                             if(res.data.flag){
+                                //执行成功
+                                //弹出成功提示信息
                                 this.$message({
                                     type:'success',
                                     message:res.data.message
                                 });
+                                //重新进行分页查询
                                 this.findPage();
-
                             }else{
+                                //执行失败
                                 this.$message.error(res.data.message);
                             }
                         });
